apps/whereami/whereami-backend/k8s/overlays/prod/destrule.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: whereami-backend-prod
spec:
  host: whereami-backend.whereami-backend.svc.cluster.local
  subsets:
  - name: whereami-backend-prod
    labels:
      app: whereami-backend
      env: prod
    trafficPolicy:
      loadBalancer:
        simple: ROUND_ROBIN
  - name: whereami-backend-prod-p1a
    labels:
      app: whereami-backend
      env: prod
      deploy.cloud.google.com/target-id: p1a
    trafficPolicy:
      loadBalancer:
        simple: ROUND_ROBIN
